tests/errors/syntax/operator-no-brace.fn
---
Description: Operator declaration with no body
Expected: FN1007
---

type Broken
{
    x: f32
    init{}
    op +(left: Broken, right: Broken) -> Broken
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
